# data_science-portafolio

./: .pre-commit-config.yaml  README.md
classic_datasets/wine_quality_v1/: pyproject.toml
classic_datasets/wine_quality_v1/tests/: test_data_preparation.py
classic_datasets/wine_quality_v1/wine_quality_v1/: run.py
classic_datasets/wine_quality_v1/wine_quality_v1/configs/: configuration.yaml
classic_datasets/wine_quality_v1/wine_quality_v1/training/: mlflow_utils.py  optimization.py
classification/credit_approval/: Dockerfile  README.md  pyproject.toml  run.py
classification/credit_approval/credit_approval/configs/: configs.yaml
classification/credit_approval/credit_approval/data/: featurization.py  retrieval.py
classification/credit_approval/credit_approval/model/: model_utils.py  pipelines.py  train.py
classification/credit_approval/credit_approval/notebooks/: eda.ipynb
classification/credit_approval/credit_approval/scoring/: score_model.py
classification/credit_approval/credit_approval/utils/: utils.py
classification/intrusion_detection/: pyproject.toml
classification/intrusion_detection/intrusion_detection/data/: retrieval.py
classification/intrusion_detection/intrusion_detection/entrypoints/: test.py
classification/iris_classifier/: Dockerfile  pyproject.toml  run.py
classification/iris_classifier/iris_classifier/configs/: config.yaml
classification/iris_classifier/iris_classifier/eda/: vz_app.py
classification/iris_classifier/iris_classifier/entrypoints/: eda.py  predict.py  test.py  training.py
classification/iris_classifier/iris_classifier/inference/: scoring.py
classification/iris_classifier/iris_classifier/train/: ml_utils.py  pipelines.py
classification/iris_classifier/iris_classifier/utils/: utils.py
classification/iris_classifier/mlruns/0/: meta.yaml
classification/iris_classifier/mlruns/275602946648742234/: meta.yaml
classification/iris_classifier/mlruns/275602946648742234/809a8696fe04440d8806414495be7fb0/: meta.yaml
classification/iris_classifier/mlruns/842026706048656526/: meta.yaml
classification/wine_quality_v1/: README.md  pyproject.toml
classification/wine_quality_v1/notebooks/: exploration.ipynb  test.ipynb
classification/wine_quality_v1/tests/: test_data_preparation.py
classification/wine_quality_v1/wine_quality_v1/: run.py
classification/wine_quality_v1/wine_quality_v1/configs/: configuration.yaml  data_preparation.yaml
classification/wine_quality_v1/wine_quality_v1/data_preparation/: data_preparation.py
classification/wine_quality_v1/wine_quality_v1/predictions/: scoring.py
classification/wine_quality_v1/wine_quality_v1/training/: evaluation.py  mlflow_utils.py  optimization.py  pipelines.py
classification/wine_quality_v1/wine_quality_v1/utils/: utils.py
dashboards/SeriesCleaner/: README.md  (+3 more)
machine_learning/bank_customer_churn_dataset/: pyproject.toml  run.py
machine_learning/bank_customer_churn_dataset/tests/: test_bank_customer_churn_dataset.py
miscellaneous/factory_pattern_for_ml_comparison/: pyproject.toml
miscellaneous/factory_pattern_for_ml_comparison/factory_pattern_for_ml_comparison/data/: retrieval.py
miscellaneous/factory_pattern_for_ml_comparison/factory_pattern_for_ml_comparison/entrypoints/: test.py
miscellaneous/factory_pattern_for_ml_comparison/factory_pattern_for_ml_comparison/factories/: model_factory.py
miscellaneous/factory_pattern_for_ml_comparison/factory_pattern_for_ml_comparison/models/: base.py  classifiers.py  mlflow_run.py  utils.py
miscellaneous/factory_pattern_for_ml_comparison/factory_pattern_for_ml_comparison/utils/: utils.py
miscellaneous/ml_deployment_with_k8s/monitor_app/app/: pyproject.toml  streamlit_app.py
mlops/full_mlapp/ml_monitor/: Dockerfile  pyproject.toml
mlops/full_mlapp/ml_monitor/ml_monitor/: app.py  streamlit_app.py
mlops/full_mlapp/ml_monitor/ml_monitor/inference/: model.py
mlops/iris_api/: Dockerfile  README.md  pyproject.toml  test.db
mlops/iris_api/app/: __init__.py  resources.py
mlops/iris_api/app/db/: db.py  models.py
mlops/iris_api/app/ml_core/: model.pkl  model.py  train_data.pkl
mlops/iris_api/app/routers/: iris.py  monitoring.py  utils.py
mlops/iris_api/app/schemas/: iris_features.py
mlops/iris_api_v2/inference_service/: pyproject.toml
mlops/iris_api_v2/train_service/: Dockerfile  iris.pkl  pyproject.toml
mlops/iris_api_v2/train_service/train_service/: __init__.py
mlops/ml_microservices/gateway/: Dockerfile  pyproject.toml  user.db
mlops/ml_microservices/gateway/gateway/: __init__.py  db.py
nlp/movie_review_classification/: poetry.toml  pyproject.toml
nlp/movie_review_classification/movie_review_classification/configs/: conf.py  training_config.yaml
nlp/movie_review_classification/movie_review_classification/data_preparation/: data_preparation.py
nlp/movie_review_classification/movie_review_classification/entrypoints/: predict.py  test.py  train.py
nlp/movie_review_classification/movie_review_classification/training/: mlflow_utils.py  train.py
regression/bike_sharing/: README.md  pyproject.toml  training_data.csv
regression/bike_sharing/bike_sharing/configs/: search_space.yaml  training.yaml
regression/bike_sharing/bike_sharing/data/: retrieval.py  saving.py
regression/bike_sharing/bike_sharing/model/: custom_models.py  evaluation.py  inference.py  mlflow_utils.py  optimize.py  pipelines.py  train.py
regression/bike_sharing/bike_sharing/monitoring/: distances.py  stats_tests.py
regression/bike_sharing/bike_sharing/utils/: utils.py
regression/bike_sharing/notebooks/: exploration.ipynb
regression/concrete_compressive_strength/: pyproject.toml
regression/concrete_compressive_strength/concrete_compressive_strength/data/: retrieval.py
regression/concrete_compressive_strength/concrete_compressive_strength/model/: base.py  evaluation.py  mlflow_utils.py  pipelines.py  training.py
regression/concrete_compressive_strength/concrete_compressive_strength/notebooks/: exploration.ipynb
regression/concrete_compressive_strength/concrete_compressive_strength/utils/: utils.py
(+310 files in other folders)
