[tool.poetry]
name = "intrusion-detection"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.0"

[tool.poetry.scripts]
data = "intrusion_detection.entrypoints.test:get_data"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
