[tool.poetry]
name = "iris-classifier"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
pytest = "^8.0.0"
mlflow = "^2.10.2"

[tool.poetry.scripts]
test='iris_classifier.entrypoints.test:test_get_dataset'
get_pipeline='iris_classifier.entrypoints.test:test_get_pipeline'
train='iris_classifier.entrypoints.training:train'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
