[tool.poetry]
name = "iris-classifier"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
pytest = "^8.0.0"
mlflow = "^2.10.2"
streamlit = "^1.31.1"
seaborn = "^0.13.2"

[tool.poetry.scripts]
train='iris_classifier.entrypoints.training:train'
predict='iris_classifier.entrypoints.predict:predict'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
