[tool.poetry]
name = "wine-quality-v1"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
prepare_data = 'wine_quality_v1.run:data_processing'
run = 'wine_quality_v1.run:main'
evaluate = 'wine_quality_v1.run:evaluate'
predict = 'wine_quality_v1.predictions.scoring:get_predictions'


[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
mlflow = "2.12.1"
ucimlrepo = "^0.0.3"
hyperopt = "^0.2.7"
pytest = "^7.4.4"
jupyter = "^1.0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
