[tool.poetry]
name = "bike-sharing"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ucimlrepo = "^0.0.6"
jupyter = "^1.0.0"
ipython = "^8.22.2"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
mlflow = "^2.11.3"
shap = "^0.45.0"
hyperopt = "^0.2.7"

[tool.poetry.scripts]
train = 'bike_sharing.model.train:train_model'
optimize = 'bike_sharing.model.train:optimize'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
