[tool.poetry]
name = "concrete-compressive-strength"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ucimlrepo = "^0.0.3"
ipython = "^8.22.2"
jupyter = "^1.0.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"

[tool.poetry.scripts]
train = "concrete_compressive_strength.model.training:train"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
