[tool.poetry]
name = "train-service"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
test = "train_service.src.entrypoints:main"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.6.1"
fastapi = {extras = ["standard"], version = "^0.115.8"}
mlflow = "^2.20.1"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
