[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.34.0"

[tool.poetry.scripts]
test= 'app.entry.test:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
